--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -1,6 +1,13 @@
 # Settings to manage and configure a Firebase App Hosting backend.
 # https://firebase.google.com/docs/app-hosting/configure
 
+# Specifies the build process for your Next.js app.
+buildConfig:
+  # Tells App Hosting to look for your Next.js app in the current directory ('.'),
+  # which is the directory containing this apphosting.yaml file.
+  # This is where your package.json, next.config.ts, etc., should be.
+  sourceDir: .
+
 runConfig:
   # Increase this value if you'd like to automatically spin up
   # more instances in response to increased traffic.
